chore: reduce building size to used modules